--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
-    "changes": "* Support selection of Photo Stream images on iOS8", 
+    "changes": "* Fix for permissions error when accessing Google Photo Picker on Android 5.x", 
     "description": "Access local files, download remote files and import files from camera or gallery.\n\nThe file module allows your app to access files via the local filesystem, cache or persistently download remote files and use the camera or gallery to capture images.", 
     "min_platform_version": "v2.1.0", 
     "namespace": "file", 
     "platform_version": "v2.2.0", 
-    "version": "2.6"
+    "version": "2.7"
 }
