--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
-	"changes": "* Implement Android dialog messages as string resources to allow for custom app internationalizations.\n* Fix crash when passing an invalid `file` object to `forge.file.info()`.",
+	"changes": "* Implement iOS dialog messages as string resources to allow for custom app internationalizations.\n",
 	"description": "Access local files, download remote files and import files from camera or gallery.\n\nThe file module allows your app to access files via the local filesystem, cache or persistently download remote files and use the camera or gallery to capture images.",
-	"min_platform_version": "v2.5.1",
+	"min_platform_version": "v2.5.5",
 	"namespace": "file",
-	"platform_version": "v2.5.1",
-	"version": "2.14"
+	"platform_version": "v2.5.5",
+	"version": "2.15"
 }
