--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
-	"changes": "* Fix iOS crash when there are no localization strings for the selected device language.\n",
-	"description": "Access local files, download remote files and import files from camera or gallery.\n\nThe file module allows your app to access files via the local filesystem, cache or persistently download remote files and use the camera or gallery to capture images.",
-	"min_platform_version": "v2.5.5",
-	"namespace": "file",
-	"platform_version": "v2.5.5",
-	"version": "2.16"
+    "changes": "* Updated for Android 25\n* Updated for iOS 11.",
+    "description": "Access local files, download remote files and import files from camera or gallery.\n\nThe file module allows your app to access files via the local filesystem, cache or persistently download remote files and use the camera or gallery to capture images.",
+    "min_platform_version": "v2.5.5",
+    "namespace": "file",
+    "platform_version": "v2.5.5",
+    "version": "2.17"
 }
