Set platform version to v2.6

--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
-    "changes": "* Updated for Android 25\n* Updated for iOS 11.",
+    "changes": "* Updated for Android 26\n* Updated for iOS 11",
     "description": "Access local files, download remote files and import files from camera or gallery.\n\nThe file module allows your app to access files via the local filesystem, cache or persistently download remote files and use the camera or gallery to capture images.",
-    "min_platform_version": "v2.5.5",
+    "min_platform_version": "v2.6.1",
     "namespace": "file",
-    "platform_version": "v2.5.5",
+    "platform_version": "v2.6.1",
     "version": "2.17"
 }
