--- a/module/inspector_config.json
+++ b/module/inspector_config.json
@@ -5,5 +5,9 @@
         }
     },
     "modules": {
+        "media": {
+            "version": "2.5",
+            "config": {}
+        }
     }
 }
