--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
+.lib
 .trigger
 identity.json
 inspector/an-inspector.*
 inspector/ios-inspector.*
 .hash
+.iml
+.gradle
+.idea
+
 inspector/ios-inspector/ForgeInspector
 inspector/ios-inspector/ForgeCore.framework
 inspector/ios-inspector/ForgeInspector.xcodeproj
 inspector/ios-inspector/ForgeCore.bundle
+inspector/ios-inspector/ForgeModule/build
+inspector/ios-inspector/ForgeModule/ForgeModule.xcodeproj/xcuserdata
+inspector/ios-inspector/build
+
 inspector/an-inspector/ForgeInspector
 inspector/an-inspector/ForgeModule/.settings
 inspector/an-inspector/ForgeModule/libs
@@ -15,6 +24,16 @@ inspector/an-inspector/ForgeModule/.classpath
 inspector/an-inspector/ForgeModule/.project
 inspector/an-inspector/ForgeModule/AndroidManifest.xml
 inspector/an-inspector/ForgeModule/project.properties
-inspector/ios-inspector/ForgeModule/build
-inspector/ios-inspector/ForgeModule/ForgeModule.xcodeproj/xcuserdata
-inspector/ios-inspector/build
+inspector/an-inspector/ForgeModule/ForgeModule.iml
+inspector/an-inspector/ForgeModule/build.gradle
+inspector/an-inspector/ForgeModule/build
+inspector/an-inspector/build.gradle
+inspector/an-inspector/gradle.properties
+inspector/an-inspector/gradlew
+inspector/an-inspector/gradlew.bat
+inspector/an-inspector/local.properties
+inspector/an-inspector/settings.gradle
+inspector/an-inspector/build
+inspector/an-inspector/gradle
+inspector/an-inspector/an-inspector.iml
+inspector/an-inspector/ForgeModule/res/.do_not_use
