Move methods that require camera and microphone access permissions to new capture module

--- a/module/inspector_config.json
+++ b/module/inspector_config.json
@@ -1,7 +1,7 @@
 {
     "this_module": {
         "config": {
-            "usage_description": "This app would like to look at pictures of your birthday"
+            "usage_description": "file.usage_description"
         }
     },
     "modules": {
