--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 .lib
 .trigger
 identity.json
@@ -15,6 +16,7 @@ inspector/ios-inspector/ForgeCore.bundle
 inspector/ios-inspector/ForgeModule/build
 inspector/ios-inspector/ForgeModule/ForgeModule.xcodeproj/xcuserdata
 inspector/ios-inspector/build
+inspector/ios-inspector/dist
 
 inspector/an-inspector/ForgeInspector
 inspector/an-inspector/ForgeModule/.settings
