--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,5 +1,5 @@
 {
-    "changes": "* Support the new iOS PHPicker media picker control\n* iOS 14 support\n* Android 30 support",
+    "changes": "* Multi-selection support for images and videos\n* Support for the new iOS PHPicker media picker control\n* iOS 14 support\n* Android 30 support\n* Deprecated method `file.URL` in favour of `file.getScriptURL`\n* Deprecated method `file.getLocal` in favour of `file.getFileFromSourceDirectory`\n* Deprecated method `file.isFile` in favour of `file.exists`\n* Deprecated method `file.getStorageInformation` in favour of `file.getStorageSizeInformation`",
     "description": "Access local files, download remote files and import files from the gallery.\n\nThe file module allows your app to access files via the local filesystem, cache or persistently download remote files and import images from the gallery.",
     "min_platform_version": "v2.9.0",
     "namespace": "file",
