--- a/module/manifest.json
+++ b/module/manifest.json
@@ -1,8 +1,8 @@
 {
-    "changes": "* Fixed: Error when selecting mp4 videos on iOS 14.1 or higher.",
+    "changes": "* Fixed: Device does not prompt for photo permissions on iOS 13 or lower.",
     "description": "Access local files, download remote files and import files from the gallery.\n\nThe file module allows your app to access files via the local filesystem, cache or persistently download remote files and import images from the gallery.",
-    "min_platform_version": "v2.9.0",
+    "min_platform_version": "v2.9.5",
     "namespace": "file",
-    "platform_version": "v2.9.0",
-    "version": "2.27"
+    "platform_version": "v2.9.5",
+    "version": "2.28"
 }
